src/App.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@700&family=Varela+Round&display=swap');

.App {
  background: radial-gradient(80% 100% at 100% 0, #5adaff 0, #5468ff 100%);
  background-size: 300% 300%;
  -webkit-animation: AnimationName 25s ease infinite;
  animation: gradient 25s ease infinite;
  height: 100vh;
  width: 100vw;
  overflow-y: scroll;
}
@-webkit-keyframes gradient {
  0%{background-position:0% 30%}
  50%{background-position:100% 85%}
  100%{background-position:0% 10%}

}
@keyframes gradient {
  0%{background-position:0% 30%}
  50%{background-position:100% 85%}
  100%{background-position:0% 10%}
}


a, a:visited, a:hover, a:active {
  color: inherit;
}

/* NAVBAR */

.navbar-wrapper {
  width: 100vw;
  height: 100px;
  display: flex;
  justify-content: flex-end;
  
}

.social-wrapper {
  display: flex;
  padding: 40px;
  text-decoration: none;
}

@media screen and (max-width: 700px) {
  .social-wrapper {
   display: none;
  }

}

.hamburger {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
  width: 60px;
  height: 50px;
  margin: 30px 30px 0 0;

}


@media screen and (min-width: 701px) {
  .hamburger {
    display: none;
  }
}


.social-div {
  background-color: white;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 10px;
  margin-right: 10px;
  text-decoration: none;
  transition: box-shadow .25s,transform .25s;
  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
}

.social-div:hover {
  box-shadow: rgba(34, 31, 42, 0.8) 0 4px 8px, rgba(26, 23, 33, 0.3) 0 3px 5px -3px, #3a3c4b 0 -3px 0 inset;
  cursor: pointer;
}



.social-icon {
  width: 30px; 
  height: 30px;
  
}

.social-div:hover {
  transform: scale(1.1);
}

/* MENU BAR */ 
.menu-bar-wrapper {
  height: 100%;
  width: 100%;
  position: absolute;
  display: flex;
  justify-content: flex-end;
  display: flex;
}

.menu-bar {
  background-color: #FAF9F6;
  height: 100%;
  width: 70%;
  z-index: 10;
  position: fixed;
  animation: ;
  border-radius: 10px;
}


#close-out-wrapper {
  height: 10%;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  margin-right: 300px;
  z-index: 11;
}

.close-out {
  border: none;
  background-color: inherit;
  font-size: 46px;
  margin-right: 35px;
  font-family: 'Varela Round', sans-serif;
  height: 70px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.close-out:hover {
  cursor: pointer;
}

#menu-social-links-wrapper {
  height: 40vh;
  width: 100%;
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}


/* CSS */
.menu-buttons {
  align-items: center;
  appearance: none;
  background: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
  border: 0;
  border-radius: 6px;
  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-flex;
  font-family: "JetBrains Mono",monospace;
  height: 48px;
  justify-content: center;
  line-height: 1;
  list-style: none;
  overflow: hidden;
  padding-left: 16px;
  padding-right: 16px;
  position: relative;
  text-align: left;
  text-decoration: none;
  transition: box-shadow .15s,transform .15s;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  white-space: nowrap;
  will-change: box-shadow,transform;
  font-size: 18px;
}

.menu-buttons:focus {
  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
}

.menu-buttons:hover {
  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
  transform: translateY(-2px);
}

.menu-buttons:active {
  box-shadow: #3c4fe0 0 3px 7px inset;
  transform: translateY(2px);
}

.menu-buttons:visited {
  color: white;
}


@media screen and (min-width: 701px) {
  .menu-bar-wrapper, .menu-bar, #close-out-wrapper, #close-out1, #close-out2 {
    display: none;
  }
}


/* IMAGE SLIDER */

.image-wrapper {
  height: 85%;
  width: 100%;
  margin-top: 50px;
  display: flex;
  justify-content: space-evenly;
}

#image-column-1 {
  height: 90%;
  width: 45%;
  background-color: white;
  opacity: .2;
}

#image-column-2 {
  height: 90%;
  width: 45%;
  background-color: white;
  opacity: .2;
}

